--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <img src="./asset/images/img (1).jpg" alt="" class="gallery_img">
                 </div>
                 <div class="img-box">
-                    <img src="./asset/images/img (2).JPG" alt="" class="gallery_img">
+                    <img src="./asset/images/img (2).jpg" alt="" class="gallery_img">
                 </div>
                 <div class="img-box">
                     <img src="./asset/images/img (3).jpg" alt="" class="gallery_img">
